2007-11-27  Badlop  <badlop@process-one.net>

	* src/mod_configure.erl: The command get-user-lastlogin is now
	compatible with both Mnesia and ODBC (EJAB-383)
	* src/mod_last.erl: Likewise
	* src/mod_last_odbc.erl: Likewise

	* doc/guide.tex: Document ejabberd_http's
	request_handlers (EJAB-372). Fixed small Latex problems.
	Sort options of listening sockets.

2007-11-27  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_announce.erl: Bugfix (thanks to Christophe Romain)

2007-11-27  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Added clarification about LDAP default port
	(thanks to Christophe Romain).

	* src/mod_vcard.erl: Ensure mod_vcard to respect FORM_TYPE
	registry (EJAB-328).
	* src/mod_vcard_ldap.erl: Likewise.
	* src/mod_vcard_odbc.erl: Likewise.
	* doc/guide.tex: Updated documentation.

	* src/mod_muc/mod_muc_room.erl: Don't show the room name as the
	room description (EJAB-382).

2007-11-26  Badlop  <badlop@process-one.net>

	* src/ejabberd.cfg.example: Added example configuration of
	databases.

	* doc/guide.tex: Fixed several typos.

	* src/ejabberd_config.erl: Print error when the configuration
	requires ODBC, MySQL or PostgreSQL libraries but are not installed
	(EJAB-210).

	* src/web/ejabberd_web_admin.erl: Added a favicon (EJAB-379).

	* src/msgs/wa.msg: New Walon translation (thanks to Pablo
	Saratxaga) (EJAB-374).

	* doc/guide.tex: Describe how ejabberd treats ejabberd.cfg file
	(EJAB-384).

	* src/ejabberd.cfg.example: Huge reorganization and grouping of
	options (EJAB-392).

	* doc/guide.tex: Describe in mod_muc: nick register and service
	admin message (EJAB-400).

	* src/mod_echo.erl: Example function that demonstrates how to
	receive XMPP packets using Erlang's message passing mechanism
	(EJAB-247).

	* src/ejabberdctl.template: Removed bashisms (EJAB-399). Set
	environment variables instead of passing parameters when calling
	erl (EJAB-421). Write erl_crash.dump in the log/ directory, with
	unique filename (EJAB-433).
